Fix visibility issues in dark mode

--- a/assets/scss/_registry.scss
+++ b/assets/scss/_registry.scss
@@ -53,10 +53,27 @@
   font-weight: $font-weight-bold;
 }
 
-// override search box entry border styling in dark mode for mobile devices
 $color-mode-type: data;
+// Define dark mode colors for data container
+$dark-border-color: darken(#cccccc, 20%);
+$background-color: map-get($otel-colors, 'dark-background');
 
 @include color-mode(dark) {
+  @media (prefers-color-scheme: dark) {
+    .border-bolded {
+      border-color: $dark-border-color;
+    }
+    // .border-danger {
+    // }
+    .card.registry-entry {
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8) !important;
+    }
+    .card.registry-entry,
+    .list-group > .list-group-item {
+      $dark-background: #262d2c;
+    }
+  }
+  // override search box entry border styling in dark mode for mobile devices
   @media (max-width: 767.98px) {
     .form-control {
       border: 1px solid rgba(var(--bs-body-color-rgb), 0.6);
@@ -64,14 +81,5 @@ $color-mode-type: data;
     .ms-auto > .badge {
       font-size: $font-size-sm;
     }
-  }
-}
-
-// Define dark mode colors for data container
-$dark-border-color: darken(#cccccc, 20%);
-
-@media (prefers-color-scheme: dark) {
-  .registry-entry .border-secondary {
-    border-color: $dark-border-color;
   }
 }
